[package]
name = "modif-finder"
version = "0.1.0"
authors = ["mennadyami <mennadyami@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
git2 = "0.16.1"
walkdir = "2.2.9"
serde = "1.0.100"
serde_json = "1.0.40"